--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "share-calendar",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "Chambers",
+    "email": "bobhus394@gmail.com"
+  },
+  "repository": {
+    "url": "https://github.com/connectshark/share-calendar",
+    "type": "git"
+  },
   "type": "module",
   "license": "MIT",
   "engines": {
@@ -18,8 +26,8 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^4.2.3",
     "unplugin-vue-router": "^0.8.4",
-    "vite": "^5.0.11"
+    "vite": "^4.4.9"
   }
 }
